--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
+    "cors": "^2.8.5",
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
     "extract-svg-sprite-webpack-plugin": "^0.8.1",
@@ -44,4 +45,3 @@
     "webpack-dev-server": "^4.15.1"
   }
 }
-
